feat[]: adiciona modules de product

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   postgres:
     image: postgres:15
-    container_name: postgtes_pdm
+    container_name: postgres_pdm
     restart: always
     ports:
       - '5432:5432'
